- Updated Track/Album Schema - Added input validation to PUT and POST routes - Added User Auth with JWTs for all necessary routes - Updated Swagger Documentation
