# routes/track.js
@@ -2,6 +2,7 @@ const express = require("express");
 const router = express();
 const tracksController = require("../controllers/tracks");
 const authenticateUser = require("../authenticate");
+const {validate, trackValidationRules} = require("../validator");
 
 router.use((req, res, next) => {
   res.setHeader("Access-Control-Allow-Methods", "GET,POST,PUT,DELETE,OPTIONS");
@@ -14,10 +15,11 @@ router.use((req, res, next) => {
   next();
 });
 
-router.get("/user", authenticateUser, tracksController.getTracks);
+router.get("/user", authenticateUser, tracksController.getTracksbyUser);
 router.get("/:trackId", authenticateUser, tracksController.getTrack);
-router.post("/", authenticateUser, tracksController.createTrack);
-router.put("/:trackId", authenticateUser, tracksController.updateTrack);
+router.get("/album/:albumId", authenticateUser, tracksController.getTracksbyAlbum);
+router.post("/",trackValidationRules(), validate, authenticateUser, tracksController.createTrack);
+router.put("/:trackId",trackValidationRules(), validate, authenticateUser, tracksController.updateTrack);
 router.delete("/:trackId", authenticateUser, tracksController.deleteTrack);
 
 module.exports = router;
